change 404 page, update First Post contents

--- a/themes/prav/layouts/404.html
+++ b/themes/prav/layouts/404.html
@@ -1,5 +1,8 @@
 {{ define "main" }}
 <center class="pure-u-1 pure-u-md-1 pure-u-sm-1">
-Page not found
+<h2>NOBODY SEES THE PAGE</h2><br>
+<img src="https://i.imgur.com/62iLAKM.png">
+<h2>NOT NOBODY NOT NO HOW</h2>
+<!--close the F12 console I can't let you see me like this please-->
 </center>
 {{ end }}
