update 404 page for clarity, retrofit visitors badge

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -294,3 +294,10 @@ blockquote {
 .pagination-item {
     margin: 0 2em;
 }
+
+.visitorBadge{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+}
