--- a/themes/prav/layouts/partials/custom_footer.html
+++ b/themes/prav/layouts/partials/custom_footer.html
@@ -1,1 +1,1 @@
-<img src="https://visitor-badge.glitch.me/badge?page_id=wiiknow" alt="visitor badge" class="visitorBadge"/>
+<img src="https://visitor-badge.glitch.me/badge?page_id=wiiknow&right_color=maroon" alt="visitor badge" class="visitorBadge"/>
