--- a/themes/prav/layouts/404.html
+++ b/themes/prav/layouts/404.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
 <center class="pure-u-1 pure-u-md-1 pure-u-sm-1">
+<h2>404 - Page or Post Not Found</h2>
 <h2>NOBODY SEES THE PAGE</h2><br>
 <img src="https://i.imgur.com/62iLAKM.png">
 <h2>NOT NOBODY NOT NO HOW</h2>
